--- a/TicTacToe/tictactoe.html
+++ b/TicTacToe/tictactoe.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/tictactoe.css">
+    <script src="./JS/scripts.js"></script>
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
             <table class="gameboard">
                 <tr>
                     <td class="gamecell">
-                        <button onclick="myFunction()" class="btn-game" type="button">.</button>
+                        <button id="btn_1" onclick="myFunction(this.id)" class="btn-game" type="button">.</button>
                     </td>
                     <td class="gamecell">
                         <button class="btn-game" type="button">.</button>
@@ -48,6 +49,5 @@
             </table>
         </div>
     </div>
-    <script src="./JS/scripts.js"></script>
 </body>
 </html>
