Got the icons to change consistently.

--- a/TicTacToe/tictactoe.html
+++ b/TicTacToe/tictactoe.html
@@ -15,35 +15,35 @@
             <table class="gameboard">
                 <tr>
                     <td class="gamecell">
-                        <button id="0" onclick="myFunction(this.id)" class="btn-game" type="button">.</button>
+                        <button id="0" onclick="makeMove(this.id)" class="btn-game" type="button">.</button>
                     </td>
                     <td class="gamecell">
-                        <button id="1" onclick="myFunction(this.id)" class="btn-game" type="button">.</button>
+                        <button id="1" onclick="makeMove(this.id)" class="btn-game" type="button">.</button>
                     </td>
                     <td class="gamecell">
-                        <button id="2" onclick="myFunction(this.id)" class="btn-game" type="button">.</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="gamecell">
-                        <button id="3" onclick="myFunction(this.id)" class="btn-game" type="button">.</button>
-                    </td>
-                    <td class="gamecell">
-                        <button id="4" onclick="myFunction(this.id)" class="btn-game" type="button">.</button>
-                    </td>
-                    <td class="gamecell">
-                        <button id="5" onclick="myFunction(this.id)" class="btn-game" type="button">.</button>
+                        <button id="2" onclick="makeMove(this.id)" class="btn-game" type="button">.</button>
                     </td>
                 </tr>
                 <tr>
                     <td class="gamecell">
-                        <button id="6" onclick="myFunction(this.id)" class="btn-game" type="button">.</button>
+                        <button id="3" onclick="makeMove(this.id)" class="btn-game" type="button">.</button>
                     </td>
                     <td class="gamecell">
-                        <button id="7" onclick="myFunction(this.id)" class="btn-game" type="button">.</button>
+                        <button id="4" onclick="makeMove(this.id)" class="btn-game" type="button">.</button>
                     </td>
                     <td class="gamecell">
-                        <button id="8" onclick="myFunction(this.id)" class="btn-game" type="button">.</button>
+                        <button id="5" onclick="makeMove(this.id)" class="btn-game" type="button">.</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="gamecell">
+                        <button id="6" onclick="makeMove(this.id)" class="btn-game" type="button">.</button>
+                    </td>
+                    <td class="gamecell">
+                        <button id="7" onclick="makeMove(this.id)" class="btn-game" type="button">.</button>
+                    </td>
+                    <td class="gamecell">
+                        <button id="8" onclick="makeMove(this.id)" class="btn-game" type="button">.</button>
                     </td>
                 </tr>
             </table>
