Full game of tic-tac-toe.

--- a/TicTacToe/tictactoe.html
+++ b/TicTacToe/tictactoe.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <h1>Tic-Tac-Toe</h1>
+    <div>
+        <p>The classic game of Tic-Tac-Toe! Choose the game piece with wich you want to start, and have fun all day
+           long! You can even keep track of the statistics and reset them whenever you feel like (...ahem!!...).
+        </p>
+    </div>
     <div class="center">
         <div class="table-container-0">
             <div>
