--- a/TicTacToe/tictactoe.html
+++ b/TicTacToe/tictactoe.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Tic-Tac-Toe</h1>
+    <h2>By: Andres Garcia Escovar</h2>
     <div>
         <p>The classic game of Tic-Tac-Toe! Choose the game piece with wich you want to start, and have fun all day
            long! You can even keep track of the statistics and reset them whenever you feel like (...ahem!!...).
