--- a/Counter/counter.html
+++ b/Counter/counter.html
@@ -87,6 +87,14 @@
             </td>
         </tr>
 
+        <tr>           
+            <td  colspan="3">
+                <button class="button-base button-total"
+                        id ="button-set"
+                        onclick="setFromDate()">Set</button>
+            </td>
+        </tr>
+
     </table>
     <script src="counter.js"></script>
 </body>
