Removed useless slashes.

--- a/Apache2/installation.html
+++ b/Apache2/installation.html
@@ -272,7 +272,7 @@
                 <li>
                     To access the website, open a web browser and type the
                     following address:
-                    <pre><code>http://localhost:8080/</code></pre>
+                    <pre><code>http://localhost:8080</code></pre>
                     where 8080 can be replaced by the port number you have
                     chosen. If everything is set up correctly, you should see
                     the message:
@@ -293,7 +293,7 @@
                 <li>
                     In the address bar of the web browser, type the following
                     address:
-                    <pre><code>http://192.168.X.X:8080/</code></pre>
+                    <pre><code>http://192.168.X.X:8080</code></pre>
                     where X.X is the IP address of the server and 8080 is the
                     port number you have chosen in the server configuration.
                 </li>
@@ -303,7 +303,6 @@
                     <pre><code>This is a test with Apache2 server!</code></pre>
                 </li>
             </ol>
-
         </div>
     </div>
 </body>
